--- a/style.css
+++ b/style.css
@@ -57,9 +57,9 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-image: url(leaves.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
+	/* background-image: url('leaves.jpg'); */
+	/* background-repeat: no-repeat;
+	background-size: cover; */
 }
 
 #playfield {
